--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -38,6 +38,10 @@ footer, header, hgroup, menu, nav, section {
   display: block;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   line-height: 1;
 }
@@ -1478,6 +1482,9 @@ ul.actions.special {
   padding-top: 3em;
   padding-left: 5em;
   position: relative;
+}
+.feature-list section small {
+  font-size: 0.9em;
 }
 @media screen and (min-width: 981px) {
   .feature-list > .row > :nth-child(-n+2) > section {
