--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -61,6 +61,9 @@ $font-bold: 700;
 	footer, header, hgroup, menu, nav, section {
 		display: block;
 	}
+	html{
+		scroll-behavior: smooth;
+	}
 
 	body {
 		line-height: 1;
@@ -614,6 +617,7 @@ $font-bold: 700;
 			padding-top: 3em;
 			padding-left: 5em;
 			position: relative;
+			small{ font-size: 0.9em;}
 		}
 
 		@include breakpoint('>medium') {
